--- a/lib/config_def.yaml
+++ b/lib/config_def.yaml
@@ -9,6 +9,26 @@ users:
     # crypto.createHash('sha1').update(pass).digest('hex')
     password: __PASSWORD__
 
+# a list of auth backends
+auth:
+  local:
+    type: local
+  # ldap:
+  #   type: ldap
+  #   groupNameAttribute: 'cn'
+  #   client_options:
+  #     url: "ldaps://ldap.example.com"
+  #     adminDn: "cn=admin,dc=example,dc=com"
+  #     adminPassword: "admin"
+  #     searchBase: "ou=People,dc=example,dc=com"
+  #     searchFilter: "(uid={{username}})"
+  #     cache: False
+  #     searchAttributes:
+  #       - "*"
+  #       - memberOf
+  #     tlsOptions:
+  #       rejectUnauthorized: False
+
 title: Sinopia
 # logo: logo.png
 
@@ -55,8 +75,10 @@ packages:
     # this includes non-authenticated users
     allow_access: all
 
-    # allow 'admin' to publish packages
-    allow_publish: admin
+    # allow local 'admin' user, and group 'Administrators' to publish packages
+    allow_publish:
+      - admin
+      - %Administrators
 
     # if package is not available locally, proxy requests to 'npmjs' registry
     proxy: npmjs
