--- a/package.yaml
+++ b/package.yaml
@@ -102,7 +102,8 @@ keywords:
   - server
 
 scripts:
-  test: mocha ./test/functional ./test/unit
+  test: mocha -R dot ./test/functional ./test/unit
+  test-travis: mocha -R spec ./test/functional ./test/unit
   lint: eslint -c ./.eslint.yaml ./lib
   prepublish: js-yaml package.yaml > package.json
 
