--- a/conf/full.yaml
+++ b/conf/full.yaml
@@ -82,6 +82,12 @@ packages:
 # you can specify listen address (or simply a port)
 #listen: localhost:4873
 
+# Configure HTTPS. Set enable to true and supply a key and cert to enable HTTPS.
+https:
+  enable: false
+  key: path/to/server.key
+  cert: path/to/server.crt
+
 # type: file | stdout | stderr
 # level: trace | debug | info | http (default) | warn | error | fatal
 #
