--- a/package.yaml
+++ b/package.yaml
@@ -45,6 +45,7 @@ dependencies:
   helpers.less: 'git://github.com/bpeacock/helpers.less.git'
   sinopia-htpasswd: '>= 0.4.3'
   http-errors: '~1.2.0' # ferver
+  express-ipfilter: '>=0.0.17 <0.1.0-0'
 
 optionalDependencies:
   # those are native modules that could fail to compile
@@ -67,6 +68,7 @@ bundledDependencies:
   - helpers.less
   - sinopia-htpasswd
   - http-errors
+  - express-ipfilter
 
 devDependencies:
   rimraf: '>=2.2.5 <3.0.0-0'
