Feature: Sending email to frontend team once bunch of packages are publshed
Change shrinkwrap and update email target to test user

fix crypt3 error by removing this optional dependency

change email "To" to frontendTeam

Do not send email notification if published package is a prerelease version

merge email sending setting

change email address to sample address

remove debug code, add default proxy npmjs to scoped package setting, check out https://github.com/rlidwka/sinopia/issues/399

--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -26,6 +26,7 @@ packages:
     # scoped packages
     access: $all
     publish: $authenticated
+    proxy: npmjs
 
   '*':
     # allow all users (including non-authenticated users) to read and
@@ -46,4 +47,3 @@ packages:
 logs:
   - {type: stdout, format: pretty, level: http}
   #- {type: file, path: sinopia.log, level: info}
-
