makes middlewares pluggable. i.e for custom oauth flows or analytics etc.

--- a/conf/full.yaml
+++ b/conf/full.yaml
@@ -125,3 +125,7 @@ logs:
 # and the highest semver is placed instead.
 #ignore_latest_tag: false
 
+# Configure plugins that can register custom middlewares
+#middlewares:
+# plugin-name:
+#   setting: true
