--- a/package.yaml
+++ b/package.yaml
@@ -22,31 +22,29 @@ dependencies:
 
   # express middlewares
   express-json5: '>=0.1.0 <1.0.0-0'
-  body-parser: '>=1.9.2 <2.0.0-0'
-  compression: '>=1.2.0 <2.0.0-0'
+  body-parser: '>=1.15.0 <2.0.0-0'
+  compression: '>=1.6.1 <2.0.0-0'
 
-  commander: '>=2.3.0 <3.0.0-0'
-  js-yaml: '>=3.0.1 <4.0.0-0'
-  cookies: '>=0.5.0 <1.0.0-0'
-  request: '>=2.31.0 <3.0.0-0'
-  async: '>=0.9.0 <1.0.0-0'
-  es6-shim: '0.21.x'
-  semver: '>=2.2.1 <5.0.0-0'
-  minimatch: '>=0.2.14 <2.0.0-0'
-  bunyan: '>=0.22.1 <2.0.0-0'
-  handlebars: '2.x'
-  highlight.js: '8.x'
-  lunr: '>=0.5.2 <1.0.0-0'
+  commander: '>=2.9.0 <3.0.0-0'
+  js-yaml: '>=3.6.0 <4.0.0-0'
+  cookies: '>=0.6.1 <1.0.0-0'
+  request: '>=2.72.0 <3.0.0-0'
+  async: '>=1.5.2 <2.0.0-0'
+  es6-shim: '0.35.x'
+  semver: '>=5.1.0 <6.0.0-0'
+  minimatch: '>=3.0.0 <4.0.0-0'
+  bunyan: '>=1.8.1 <2.0.0-0'
+  handlebars: '4.x'
+  highlight.js: '9.x'
+  lunr: '>=0.7.0 <1.0.0-0'
   render-readme: '>=0.2.1'
   jju: '1.x'
   JSONStream: '1.x'
 
   mkdirp: '>=0.3.5 <1.0.0-0'
   sinopia-htpasswd: '>= 0.4.3'
-  http-errors: '>=1.2.0'
-
-  # node 0.10 compatibility, should go away soon
-  readable-stream: '~1.1.0'
+  http-errors: '>=1.4.0'
+  readable-stream: '~2.1.0'
 
 optionalDependencies:
   # those are native modules that could fail to compile
@@ -59,14 +57,14 @@ devDependencies:
   # Tools required for testing
   #
   rimraf: '>=2.2.5 <3.0.0-0'
-  bluebird: '2 >=2.9'
+  bluebird: '>=3.3.5'
 
   mocha: '2 >=2.2.3'
 
   #
   # Linting tools
   #
-  eslint: '1 >=1.1.0'
+  eslint: '2 >=2.8.0'
 
   # for debugging memory leaks, it'll be require()'d if
   # installed, but I don't want it to be installed everytime
@@ -75,13 +73,13 @@ devDependencies:
   #
   # Tools required to build static files
   #
-  browserify: '7.x'
+  browserify: '13.x'
   browserify-handlebars: '1.x'
-  grunt: '>=0.4.4 <1.0.0-0'
+  grunt: '>=1.0.1 <2.0.0-0'
   grunt-cli: '*'
-  grunt-browserify: '>=2.0.8 <3.0.0-0'
-  grunt-contrib-less: '>=0.11.0 <1.0.0-0'
-  grunt-contrib-watch: '>=0.6.1 <1.0.0-0'
+  grunt-browserify: '>=5.0.0 <6.0.0-0'
+  grunt-contrib-less: '>=1.3.0 <2.0.0-0'
+  grunt-contrib-watch: '>=1.0.0 <2.0.0-0'
 
   # for building static/main.js,
   # not required in runtime
